// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults renders a list of results including vehicles and ghosts 1`] = `
<div
  className="m-search-results"
>
  <ul
    className="m-search-results__list"
  >
    <li>
      <button
        className="m-search-results__card"
        onClick={[Function]}
      >
        <div
          className="m-properties-list"
        >
          <table
            className="m-properties-list__table"
          >
            <tbody>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Run
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  123-0123
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </button>
    </li>
    <li>
      <button
        className="m-search-results__card"
        onClick={[Function]}
      >
        <div
          className="m-properties-list"
        >
          <table
            className="m-properties-list__table"
          >
            <tbody>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Run
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  run-1
                </td>
              </tr>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Vehicle
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  v1-label
                </td>
              </tr>
              <tr
                className="m-properties-list__property m-properties-list__property--operator fs-mask"
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Operator
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  PATTI SMITH #op1
                </td>
              </tr>
              <tr
                className="m-properties-list__property m-properties-list__property--last-login"
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Last Login
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  4 hr 3 min; 1:38 PM
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          className="m-search-results__card-route-label"
        >
          <output
            aria-label="Route Variant Name"
            className="m-route-variant-name undefined"
          >
            <output
              aria-label="Route & Variant"
              className="m-route-variant-name__route-id"
            >
              39_X
            </output>
             
            <output
              aria-label="Headsign"
              className="m-route-variant-name__headsign"
            >
              Forest Hills
            </output>
          </output>
        </div>
      </button>
    </li>
  </ul>
</div>
`;

exports[`SearchResults renders a selected result card 1`] = `
<div
  className="m-search-results"
>
  <ul
    className="m-search-results__list"
  >
    <li>
      <button
        className="m-search-results__card"
        onClick={[Function]}
      >
        <div
          className="m-properties-list"
        >
          <table
            className="m-properties-list__table"
          >
            <tbody>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Run
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  123-0123
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </button>
    </li>
    <li>
      <button
        className="m-search-results__card m-search-results__card--selected"
        onClick={[Function]}
      >
        <div
          className="m-properties-list"
        >
          <table
            className="m-properties-list__table"
          >
            <tbody>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Run
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  run-1
                </td>
              </tr>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Vehicle
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  v1-label
                </td>
              </tr>
              <tr
                className="m-properties-list__property m-properties-list__property--operator fs-mask"
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Operator
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  WILL SMITH #op1
                </td>
              </tr>
              <tr
                className="m-properties-list__property m-properties-list__property--last-login"
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Last Login
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  4 hr 3 min; 1:38 PM
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          className="m-search-results__card-route-label"
        >
          <output
            aria-label="Route Variant Name"
            className="m-route-variant-name undefined"
          >
            <output
              aria-label="Route & Variant"
              className="m-route-variant-name__route-id"
            >
              39_X
            </output>
             
            <output
              aria-label="Headsign"
              className="m-route-variant-name__headsign"
            >
              Forest Hills
            </output>
          </output>
        </div>
      </button>
    </li>
  </ul>
</div>
`;

exports[`SearchResults renders no results 1`] = `
<div
  className="m-search-results"
>
  <div
    className="m-search-results__none"
  >
    <div
      className="m-search-results__heading"
    >
      No Search Results
    </div>
    <p>
      There were no matching results found for “
      test
      ”. Please try again using numbers or last names only.
    </p>
    <p>
      Please note that at this time search is limited to active vehicles and logged-in personnel.
    </p>
    <button
      className="m-search-results__clear-search-button"
      onClick={[Function]}
    >
      Clear search
    </button>
  </div>
</div>
`;

exports[`SearchResults shows the new badge for vehicle that have logged in within the past 30 minutes 1`] = `
<div
  className="m-search-results"
>
  <ul
    className="m-search-results__list"
  >
    <li>
      <button
        className="m-search-results__card m-search-results__card--new"
        onClick={[Function]}
      >
        <div
          className="m-search-results__card-new-badge"
        >
          <span
            className="m-search-results__card-new-badge-label"
          >
            New
          </span>
          <span
            className="m-search-results__card-new-badge-icon"
          >
            <svg
              viewBox="0 0 9 9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="4.5"
                cy="4.5"
                r="4.5"
              />
            </svg>
          </span>
        </div>
        <div
          className="m-properties-list"
        >
          <table
            className="m-properties-list__table"
          >
            <tbody>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Run
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  run-1
                </td>
              </tr>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Vehicle
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  v1-label
                </td>
              </tr>
              <tr
                className="m-properties-list__property m-properties-list__property--operator fs-mask"
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Operator
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  PATTI SMITH #op1
                </td>
              </tr>
              <tr
                className="m-properties-list__property m-properties-list__property--last-login"
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Last Login
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  1 min; 5:40 PM
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          className="m-search-results__card-route-label"
        >
          <output
            aria-label="Route Variant Name"
            className="m-route-variant-name undefined"
          >
            <output
              aria-label="Route & Variant"
              className="m-route-variant-name__route-id"
            >
              39_X
            </output>
             
            <output
              aria-label="Headsign"
              className="m-route-variant-name__headsign"
            >
              Forest Hills
            </output>
          </output>
        </div>
      </button>
    </li>
  </ul>
</div>
`;
